<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNews"
    android:background="@color/plat">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:titleTextColor="?attr/colorSecondary"
        android:background="@color/plat"
        app:title="Oluştur"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        tools:targetApi="m">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            app:cardElevation="0dp"
            android:id="@+id/shareNews"
            android:foreground="@drawable/ripple"
            app:cardBackgroundColor="@color/silver">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preview"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/shareText"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="9dp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="10dp"
            app:cardElevation="0dp"
            android:id="@+id/reEdit"
            android:visibility="gone"
            android:foreground="@drawable/ripple"
            app:cardBackgroundColor="@color/silver">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/reEditText"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"/>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:id="@+id/editPhase"
        android:visibility="visible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/editTextCard">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_alignParentTop="true"
                    android:id="@+id/titleLay"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/purple"
                    app:startIconDrawable="@drawable/pencil_fill"
                    android:layout_marginHorizontal="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/title"
                        android:id="@+id/titleNews"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_below="@id/titleLay"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:id="@+id/newContainLay"
                    app:boxStrokeColor="@color/purple"
                    app:startIconDrawable="@drawable/newspaper"
                    android:layout_marginHorizontal="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/news"
                        android:inputType="textMultiLine"
                        android:id="@+id/newInput"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_below="@id/newContainLay"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:id="@+id/categoryLay"
                    app:boxStrokeColor="@color/purple"
                    android:focusable="false"
                    app:startIconDrawable="@drawable/bookmark_check_fill"
                    android:layout_marginHorizontal="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:inputType="none"
                        android:focusable="false"
                        android:id="@+id/category"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_below="@id/categoryLay"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    app:boxStrokeColor="@color/purple"
                    android:id="@+id/tagLay"
                    app:startIconDrawable="@drawable/tag_fill"
                    android:layout_marginHorizontal="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tag"
                        android:inputType="text"
                        android:id="@+id/tags"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tagLay"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:id="@+id/tagsChips"/>

            </RelativeLayout>

        </ScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="9dp"
            app:cardBackgroundColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:id="@+id/editTextCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/link_45deg"
                    android:background="@drawable/image_button"
                    android:foreground="@drawable/ripple"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/link"
                    android:contentDescription="@string/icons"
                    android:layout_gravity="center|end"
                    app:tint="@color/white"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/text_left"
                    android:background="@drawable/image_button"
                    android:foreground="@drawable/ripple"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icons"
                    android:id="@+id/textLeft"
                    android:layout_gravity="center|end"
                    app:tint="@color/white"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/text_center"
                    android:background="@drawable/image_button"
                    android:foreground="@drawable/ripple"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/textCenter"
                    android:contentDescription="@string/icons"
                    android:layout_gravity="center|end"
                    app:tint="@color/white"/>

                <ImageButton
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/text_right"
                    android:background="@drawable/image_button"
                    android:foreground="@drawable/ripple"
                    android:id="@+id/textRight"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/icons"
                    android:layout_gravity="center|end"
                    app:tint="@color/white" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/def_size"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:id="@+id/textSize"
                    android:textColorHint="@color/white"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:autofillHints="16" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone"
        android:id="@+id/previewPhase">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/userImgCard"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginHorizontal="10dp"
                    android:text=""
                    android:id="@+id/title"
                    android:textIsSelectable="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="9dp"
                    android:layout_below="@id/title"
                    android:id="@+id/newCard"
                    app:cardElevation="0dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/newImg"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/image"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_below="@id/newCard"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/contain"
                    android:textIsSelectable="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:textStyle="normal"/>

            </RelativeLayout>

        </ScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:cardElevation="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="12dp"
            android:id="@+id/userImgCard">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:id="@+id/userImg"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userImgCard"
            android:layout_alignTop="@id/userImgCard"
            android:layout_alignBottom="@id/userImgCard"
            android:layout_marginStart="10dp"
            android:text=""
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/userName"/>

    </RelativeLayout>

</RelativeLayout>